test/errors/error15.sp
%t contains a number not in nat
#maxint=5.
sorts
#s={a,b,f(a)}. 
predicates
p(#s).
rules
p(f(b)).
